node-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-demo
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-demo
  template:
    metadata:
      labels:
        app: nodejs-demo
    spec:
      containers:
        - name: nodejs-demo
          image: thallavi/nodejs-demo:latest
          ports:
            - containerPort: 3000
