node-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-demo-service
  namespace: monitoring
spec:
  selector:
    app: nodejs-demo
  ports:
    - protocol: TCP
      port: 80 # Service exposed on port 80
      targetPort: 3000 # Maps to containerPort in Deployment
  type: NodePort
